package ca.dejong;

public interface PaymentStrategy {
    String pay(double amount);
}
