@startuml

interface PaymentStrategy {
    +pay(amount:double):String
}

class CashStrategy {
    +pay(amount:double):String
}

class CreditCardStrategy {
    -name:String
    -cardNumber:String
    -cvv:int
    -expiryDate:String
    +CreditCardStrategy(name:String, cardNumber:String, cvv:int, expiryDate:Date)
    +pay(amount:double):String
}

class Orders {
    -orderItems:List
    +Orders(orderItems:OrderItems)
    +addItems(orderItems:OrderItems):void
    +removeItems(orderItems:OrderItems):void
    +getOrderItems():List
    +calculateTotal():double
}

class OrderItems {
    -itemCode:String
    -price:double
    +OrderItems(itemCode:String, price:double)
    +getItemCode():String
    +getPrice():double
}

class Customers {
    -name:String
    -contact:String
    -address:String
    -orders:Orders
    -paymentStrategy:PaymentStrategy
    +Customers(name:String, contact:String, address:String, orders:Orders, paymentStrategy:PaymentStrategy)
    +getName():String
    +getEmail():String
    +getContact():String
    +getAddress():String
    +getOrders():Orders
    +getPaymentMethod():PaymentStrategy
    +pay():String
}

PaymentStrategy <|.. CashStrategy
PaymentStrategy <|.. CreditCardStrategy
Customers o-- PaymentStrategy
Orders "1" -- "Many" OrderItems : Has
Customers *-- Orders


@enduml